--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -113,7 +113,6 @@ img {
 }
 
 .navigation-form {
-  min-width: 620px;
   margin: 0px 0px 0px 93px;
 }
 
@@ -140,7 +139,7 @@ img {
 .navigation-link:hover,
 .navigation-link:focus {
   color: var(--blue-color);
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  
 }
 
 .navigation-link::after {
@@ -156,9 +155,9 @@ img {
   border-radius: 2px;
 }
 
-.navigation-link.current::after {
+/*.navigation-link.current::after {
   opacity: 1;
-}
+}*/
 
 .active {
   color: var(--blue-color);
@@ -172,10 +171,13 @@ img {
 
 .mail {
   margin-right: 10px;
+  fill: #757575;
+  
 }
 
 .smartphone {
   margin-right: 10px;
+  fill: #757575;
   
 }
 
@@ -202,8 +204,18 @@ img {
 
 .kontakt-link:hover,
 .kontakt-link:focus {
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
   color: var(--blue-color);
+}
+
+.kontakt-link:hover .mail,
+.kontakt-link:focus .mail {
+  fill: var(--blue-color);
+  
+}
+
+.kontakt-link:hover .smartphone,
+.kontakt-link:focus .smartphone { 
+  fill: var(--blue-color);
 }
 
 .hero-container {
@@ -273,6 +285,9 @@ img {
 }
 
 .antenna {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #F5F4FA;
   width: 270px;
   height: 120px;
@@ -398,7 +413,49 @@ img {
 }
 
 .list {
+
 }
+
+.social-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.social-list-link {
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--white-color);
+  border-radius: 50%;
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--blue-color);
+}
+
+.social-list-icon {
+  fill: #afb1b8;
+}
+
+.social-list-link:hover .social-list-icon,
+.social-list-link:focus .social-list-icon {
+  fill: var(--white-color);
+}
+
+.social-list-item {
+  margin-right: 10px;
+
+}
+
+.social-list-item:last-child {
+  margin-right: 0;
+}
+
 
 .team-link {
   margin: 0px 30px 0px 0px;
@@ -435,7 +492,7 @@ img {
 }
 
 .team-card-pro {
-  margin-bottom: 30px;
+  margin-bottom: 16px;
   font-weight: var(--font-w);
   font-size: 16px;
   line-height: 1.19;
@@ -443,6 +500,61 @@ img {
 
   color: #757575;
 }
+
+.client-box {
+  padding-top: 94px;
+ 
+}
+
+.our-client-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 94px;
+  background-color:var(--white-color);
+  
+  
+}
+
+.our-client-link {
+  background-color: var(--white-color);
+  border-radius: 50%;
+
+}
+
+.our-client-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0.1rem solid #AFB1B8;
+  margin-right: 30px;
+  border-radius: 4px 4px 4px 4px;
+  width: 170px;
+  height: 92px;
+  
+}
+
+.our-client-item:last-child {
+  margin-right: 0;
+}
+
+.our-client-link:hover,
+.our-client-link:focus {
+  background-color: transparent;
+}
+
+.our-client-icon {
+  fill: #afb1b8;
+  width: 106px;
+  height: 60px;
+}
+
+.our-client-link:hover .our-client-icon,
+.our-client-link:focus .our-client-icon {
+  fill: var(--blue-color);
+}
+
+
 
 .footer {
   background-color: rgba(47, 48, 58, 1);
@@ -495,6 +607,59 @@ address-list-body {
 
 .map-address {
   color: var(--white-color);
+}
+
+.doing-title-footer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white-color);
+}
+
+.footer-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-list-link {
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: #464646;
+  border-radius: 50%;
+}
+
+.footer-list-link:hover,
+.footer-list-link:focus {
+  background-color: var(--blue-color);
+}
+
+.footer-list-icon {
+  fill: var(--white-color);
+}
+
+.footer-list-link:hover .footer-list-icon,
+.footer-list-link:focus .footer-list-icon {
+  fill: var(--white-color);
+}
+
+.footer-list-item {
+  margin-right: 10px;
+
+}
+
+.footer-list-item:last-child {
+  margin-right: 0;
 }
 
 .portfolio-work-gallary {
