--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,7 +27,6 @@ body {
   text-decoration: none;
 }
 
-
 .list {
   list-style: none;
 }
@@ -139,7 +138,6 @@ img {
 .navigation-link:hover,
 .navigation-link:focus {
   color: var(--blue-color);
-  
 }
 
 .navigation-link::after {
@@ -166,23 +164,17 @@ img {
 .kontakt-line {
   margin-left: auto;
   display: flex;
-  
-
 }
 
 .mail {
   margin-right: 10px;
   fill: #757575;
-  
 }
 
 .smartphone {
   margin-right: 10px;
   fill: #757575;
-  
 }
-
-
 
 .kontakt-link {
   display: flex;
@@ -192,14 +184,11 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   margin: 0px 40px 0px 0px;
-  
 
   color: #757575;
 }
 
 .kontakt-link:first-child {
-
-  
 }
 
 .kontakt-link:last-child {
@@ -214,11 +203,10 @@ img {
 .kontakt-link:hover .mail,
 .kontakt-link:focus .mail {
   fill: var(--blue-color);
-  
 }
 
 .kontakt-link:hover .smartphone,
-.kontakt-link:focus .smartphone { 
+.kontakt-link:focus .smartphone {
   fill: var(--blue-color);
 }
 
@@ -229,10 +217,13 @@ img {
 .font-hero-header {
   background-color: #2f303a;
   padding: 200px 0;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4) , rgba(47, 48, 58, 0.4)) ,
-  url(../images/imgbck.jpg);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/imgbck.jpg);
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
 
   text-align: center;
   /* position: absolute; */
@@ -292,15 +283,12 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #F5F4FA;
+  background-color: #f5f4fa;
   width: 270px;
   height: 120px;
   border-radius: 4px;
   margin-bottom: 30px;
-
 }
-
-
 
 .features-list {
   display: flex;
@@ -337,6 +325,8 @@ img {
   padding: 0px 0px 94px 0px;
 }
 
+
+
 .doing-container {
   text-align: center;
 }
@@ -353,6 +343,7 @@ img {
 
 .doing-list {
   display: flex;
+  
 }
 
 .doing-link {
@@ -390,7 +381,6 @@ img {
 }
 
 .list {
-
 }
 
 .social-list {
@@ -402,7 +392,7 @@ img {
 
 .social-list-link {
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
   width: 44px;
   height: 44px;
@@ -426,13 +416,11 @@ img {
 
 .social-list-item {
   margin-right: 10px;
-
 }
 
 .social-list-item:last-child {
   margin-right: 0;
 }
-
 
 .team-link {
   margin: 0px 30px 0px 0px;
@@ -457,7 +445,6 @@ img {
   transition: all 750ms ease;
 }
 
-
 .team-card-name {
   font-weight: 500;
   font-size: 16px;
@@ -481,8 +468,6 @@ img {
 .client {
   padding-top: 94px;
   padding-bottom: 94px;
-
- 
 }
 
 .our-client-list {
@@ -501,15 +486,12 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #AFB1B8;
+  border: 1px solid #afb1b8;
   margin-right: 30px;
   border-radius: 4px 4px 4px 4px;
   width: 170px;
   height: 92px;
-  
 }
-
-
 
 .our-client-item:last-child {
   margin-right: 0;
@@ -518,15 +500,12 @@ img {
 .our-client-link:hover,
 .our-client-link:focus {
   background-color: var(--white-cbolor);
-  
-
 }
 
 .our-client-item:hover,
 .our-client-item:focus {
   border: 1px solid var(--blue-color);
 }
-
 
 .our-client-icon {
   fill: #afb1b8;
@@ -537,23 +516,19 @@ img {
   fill: var(--blue-color);
 }
 
-
-
 .footer {
   background-color: rgba(47, 48, 58, 1);
   padding: 60px 0px 60px 0px;
 }
 
 .footer-title {
- 
 }
 
 .footer-container {
-    display: flex;
-    /* padding: 60px 0px 60px 0px; */
-    align-items: baseline;
+  display: flex;
+  /* padding: 60px 0px 60px 0px; */
+  align-items: baseline;
 }
-
 
 .footer-contact-body {
   padding-left: 70px;
@@ -623,7 +598,7 @@ img {
 
 .footer-list-link {
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
   width: 44px;
   height: 44px;
@@ -647,7 +622,6 @@ img {
 
 .footer-list-item {
   margin-right: 10px;
-
 }
 
 .footer-list-item:last-child {
@@ -663,12 +637,10 @@ img {
   padding: 94px 0px 94px 0px;
 }*/
 
-
 .portfolio-btn-list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
-  
 }
 
 .portfolio-btn-item {
@@ -705,13 +677,16 @@ img {
 .portfolio-cards-list {
   display: flex;
   justify-content: center;
-  
+
   flex-wrap: wrap;
 }
 
+
+
 .card-link:hover {
   box-shadow: 5px 10px 10px -3px rgb(0 0 0 / 20%),
-  -10px 0 10px -12px rgba(0 0 0 / 20%);
+    -10px 0 10px -12px rgba(0 0 0 / 20%);
+   
 }
 
 .portfolio-cards-item {
@@ -731,13 +706,65 @@ img {
 
 .card-link {
   display: block;
+  
 }
+
 
 .card-img {
   max-width: 370px;
   
+}
+
+.img-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  /* or 156% */
+
+  letter-spacing: 0.03em;
+
+  color: #FFFFFF;
+}
+
+.overlay-make {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: transparent;
+ 
+  overflow: hidden;
+}
+
+.overlay-make:hover .overlay {
+  transform: translatex(0);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay > p {
+  color: #fff;
+  padding-top: 64px;
+  padding-bottom: 64px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin: 0;
   
 }
+
 
 
 
@@ -770,4 +797,47 @@ img {
   letter-spacing: 0.03em;
 
   color: #757575;
+}
+
+/*modal css*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 500ms linear, visibility 500ms linear;
+}
+
+.modal {
+  width: 528px;
+  height: 580px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid var(--grey-color);
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
