--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -724,32 +724,44 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  color: white;
 }
 
 .btn-submit {
-  
   width: 200px;
   height: 50px;
-
-  display: flex;
+  
+  margin-left: 12px;
   justify-content: center;
-  align-items: center;
+  
   border: none;
-  
-  
-  
-  color: #fff;
-  font-size: inherit;
+  font-weight: 700;
+  padding: 10px 29px;
   cursor: pointer;
   background-color: var(--blue-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
   border-radius: 4px;
-  
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  color: var(--white-color);
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+    
 }
 
 .user-form {
   display: flex;
 
+}
+
+.send-icon {
+  margin-left: 10px;
 }
 
 
@@ -950,4 +962,165 @@ img {
   visibility: hidden;
   pointer-events: none;
 }
+
+.sign-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sign-text {
+  margin-top: 40px;
+  margin-bottom: 12px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+
+.sign-name {
+  font-family: var(--main-font);
+  font-weight: var(--font-w);
+  
+  width: 448px;
+  height: 40px;
+
+  display: block;
+  margin-bottom: 30px;
+  
+  margin: 0 auto;
+  padding-left: 30px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  
+}
+
+.modal-icon-1 {
+  position: absolute;
+  top: 100px;
+  left: 50px;
+  
+}
+
+.sign-phone {
+  
+  width: 448px;
+  height: 40px;
+  margin-top: 10px;
+  display: block;
+  margin-bottom: 30px;
+  
+  margin: 0 auto;
+  padding-left: 30px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.modal-icon-2 {
+  position: absolute;
+  top: 168px;
+  left: 50px;
+}
+
+.phone-number {
+  margin-top: 10px
+}
+
+
+.sign-email {
+  
+  width: 448px;
+  height: 40px;
+  margin-top: 10px;
+  display: block;
+  margin-bottom: 30px;
+  
+  margin: 0 auto;
+  padding-left: 30px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+}
+
+.modal-icon-3 {
+  position: absolute;
+  top: 233px;
+  left: 50px;
+}
+
+.modal-field-name {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  
+
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
+
+.mail-form {
+  margin-top: 10px;
+}
+
+.sign-comm {
+  
+  width: 448px;
+  height: 120px;
+  margin-top: 10px;
+
+  display: block;
+  margin-bottom: 30px;
+  
+  margin: 0 auto;
+  padding-top: 12px;
+  padding-left: 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.comm-form {
+  margin-top: 10px;
+}
+
+.sign-btn {
+  width: 200px;
+  height: 50px;
+  margin-top: 30px;
+  
+  
+  text-align: center;
+  align-items: center;
+  border: none;
+  font-weight: 700;
+  
+  cursor: pointer;
+  background-color: var(--blue-color);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  color: var(--white-color);
+  letter-spacing: 0.06em;
+
+}
+
+.sign-text-reg {
+  
+  margin-top: 20px;
+}
+
+
+
+
 
