--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -939,6 +939,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding: 40px;
 }
 
 .modal-close-btn {
@@ -970,7 +971,7 @@ img {
 }
 
 .sign-text {
-  margin-top: 40px;
+  
   margin-bottom: 12px;
   font-family: 'Roboto';
   font-style: normal;
@@ -989,7 +990,6 @@ img {
   
   width: 448px;
   height: 40px;
-
   display: block;
   margin-bottom: 30px;
   
@@ -997,13 +997,16 @@ img {
   padding-left: 30px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  
+  cursor: pointer;
 }
 
 .modal-icon-1 {
   position: absolute;
   top: 100px;
   left: 50px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -1019,16 +1022,25 @@ img {
   padding-left: 30px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
 }
 
 .modal-icon-2 {
   position: absolute;
   top: 168px;
   left: 50px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .phone-number {
-  margin-top: 10px
+  margin-top: 10px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 
@@ -1044,6 +1056,7 @@ img {
   padding-left: 30px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
 
 }
 
@@ -1059,6 +1072,7 @@ img {
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
+  margin-bottom: 4px;
   
 
   letter-spacing: 0.01em;
@@ -1074,16 +1088,17 @@ img {
   
   width: 448px;
   height: 120px;
-  margin-top: 10px;
-
+  
+  resize: none;
   display: block;
-  margin-bottom: 30px;
+  
   
   margin: 0 auto;
   padding-top: 12px;
   padding-left: 16px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
 }
 
 .comm-form {
@@ -1116,11 +1131,66 @@ img {
 }
 
 .sign-text-reg {
-  
   margin-top: 20px;
 }
 
+.sign-name:hover,
+.sign-name:focus {
+  border: 1px solid var(--blue-color);
+}
 
+.sign-email:hover,
+.sign-email:focus {
+  border: 1px solid var(--blue-color);
+}
 
+.sign-comm:hover,
+.sign-comm:focus {
+  border: 1px solid var(--blue-color);
+}
 
+.sign-phone:hover,
+.sign-phone:focus {
+  border: 1px solid var(--blue-color);
+}
 
+.modal-close-icon:hover,
+.modal-close-icon:focus {
+  fill: var(--blue-color);
+}
+
+.modal-icon-1:hover,
+.modal-icon-1:focus {
+  fill: var(--blue-color);
+ 
+}
+
+.modal-icon-2:hover,
+.modal-icon-2:focus {
+  fill: var(--blue-color);
+ 
+}
+
+.modal-icon-3:hover,
+.modal-icon-3:focus {
+  fill: var(--blue-color);
+ 
+}
+
+.text-reg {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  /* identical to box height, or 171% */
+
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+
+.reg-href {
+  color: var(--blue-color);
+
+}
